Corretti messaggi di warning durante l'avvio del programma, e aggiornato messaggio di eliminazione dell'assunzione del farmaco per il paziente